--- a/package.json
+++ b/package.json
@@ -76,12 +76,9 @@
 		"start:types": "tsc -p tsconfig-types.json -w --preserveWatchOutput",
 		"start:tests": "tsc -p tests/tsconfig.json -w --preserveWatchOutput",
 		"test": "cd tests_out && node --enable-source-maps --import=./env.js --test",
-		"lint": "eslint --config .eslintrc.cjs ./{src,tests}/**/*.{ts,tsx}",
-		"prepack": "npm run build && npm run lint && npm test && node scripts/prepack.js"
+		"prepack": "npm run build && npm test && node scripts/prepack.js"
 	},
 	"devDependencies": {
-		"@mpt/eslint-rules": "^5.0.2",
-		"rvx": "file:.",
 		"@rollup/plugin-terser": "^0.4.4",
 		"@types/jsdom": "^21.1.7",
 		"@types/node": "^22.7.4",
@@ -91,6 +88,7 @@
 		"rollup": "^4.24.0",
 		"rollup-plugin-dts": "^6.1.1",
 		"rollup-plugin-prettier": "^4.1.1",
+		"rvx": "file:.",
 		"typescript": "^5.6.2",
 		"yargs-parser": "^21.1.1"
 	}
