Add debounce example

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -6,7 +6,8 @@
 		"strict": true,
 		"isolatedModules": true,
 		"jsx": "react-jsx",
-		"jsxImportSource": "rvx"
+		"jsxImportSource": "rvx",
+		"types": []
 	},
 	"include": [
 		"src"
