Move event system out of core

--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
 			"types": "./dist/es/element/index.d.ts",
 			"default": "./dist/es/element/index.js"
 		},
+		"./event": {
+			"types": "./dist/es/event/index.d.ts",
+			"default": "./dist/es/event/index.js"
+		},
 		"./id": {
 			"types": "./dist/es/id/index.d.ts",
 			"default": "./dist/es/id/index.js"
