--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
 		"build:types": "tsc -p tsconfig-types.json",
 		"build:tests": "tsc -p tests/tsconfig.json",
 		"build:bundle:core": "node scripts/bundle.js -m core/index-builder -o dist/rvx",
-		"build:bundle:all": "node scripts/bundle.js -m async core/index-all element id router store test -o dist/rvx.all",
+		"build:bundle:all": "node scripts/bundle.js -m async core/index-all element event id router store test -o dist/rvx.all",
 		"start": "mx-parallel npm:start:*",
 		"start:es": "tsc -p tsconfig-es.json -w --preserveWatchOutput",
 		"start:types": "tsc -p tsconfig-types.json -w --preserveWatchOutput",
