Add vite/client types by default

--- a/templates/vite-ssg/tsconfig.json
+++ b/templates/vite-ssg/tsconfig.json
@@ -5,7 +5,10 @@
 		"moduleResolution": "Bundler",
 		"jsx": "react-jsx",
 		"jsxImportSource": "rvx",
-		"strict": true
+		"strict": true,
+		"types": [
+			"vite/client"
+		]
 	},
 	"include": [
 		"src"
