--- a/package.json
+++ b/package.json
@@ -98,12 +98,11 @@
 		"@mxjp/parallel": "^1.0.2",
 		"@rollup/plugin-terser": "^0.4.4",
 		"@types/jsdom": "^21.1.7",
-		"@types/node": "^22.13.9",
+		"@types/node": "^22.14.0",
 		"jsdom": "^26.0.0",
-		"rollup": "^4.34.9",
-		"rollup-plugin-dts": "^6.1.1",
+		"rollup": "^4.39.0",
+		"rollup-plugin-dts": "^6.2.1",
 		"rvx": "file:.",
-		"typescript": "^5.8.2",
-		"yargs-parser": "^21.1.1"
+		"typescript": "^5.8.3"
 	}
 }
