enable declaration source maps

--- a/tsconfig-types.json
+++ b/tsconfig-types.json
@@ -4,6 +4,7 @@
 		"rootDir": "src",
 		"outDir": "dist/es",
 		"declaration": true,
+		"declarationMap": true,
 		"emitDeclarationOnly": true
 	},
 	"include": [
